# SHUD-NWM

./: .dockerignore  .env.example  .gitignore  .large-file-guard.json  .markdownlint.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  progress.md  pyproject.toml  全国水文模拟系统_建设汇报稿.md
.entropy-baseline/: 2026-06-12T160245Z.json  latest.json
apps/: __init__.py
config/: dev.yaml  job_type_templates.yaml  resource_profiles.yaml
docs/: QHH_MVP_client_friendly_summary.md  ROADMAP.md  VALIDATION.md  bugs.md  forcing数据处理流程与rSHUD一致性说明.md  review-loop-log.jsonl  stage-pipeline-log.jsonl  系统现状-技术简报.md
infra/: README.two-node-docker.md  compose.compute.yml  compose.display.yml  docker-compose.dev.yml
openapi/: nhms.v1.yaml
openspec/: glossary.md  project-profile.md
schemas/: archive_completeness_receipt.schema.json  archive_rebuild_drill_receipt.schema.json  forcing_domain_handoff.schema.json  grid_snapshot_metadata.schema.json  pipeline_job.schema.json  product_archive_manifest.schema.json  product_archive_receipt.schema.json  qc_result.schema.json  run_manifest.schema.json  run_status.schema.json  salvage_manifest.schema.json  scheduler_file_provider_refresh_receipt.schema.json  scheduler_registry_package_cutover.schema.json  timeseries_compression_live_evidence.schema.json  timeseries_compression_receipt.schema.json  timeseries_retention_receipt.schema.json
scripts/: apply_smoke_migrations.py  audit_return_period_indexes.py  backfill_river_segment_multilinestring.py  create_qhh_shud_manifest.py  install_node22_scheduler_file_provider_refresh.sh  local_pg.sh  m24_emit_baseline.py  m24_gateway_proof.py  m24_grib_preflight_proof.py  m24_lease_nfs_proof.py  node22_clone_direct_grid_cutover_states.py  node22_scheduler_evidence_retention.py  node27_archive_rebuild_drill.py  node27_archive_rebuild_drill_once.sh  node27_autopipe_cron.sh  node27_autopipeline.py  node27_clone_direct_grid_cutover_states.py  node27_db_export_salvage.py  node27_db_export_salvage_once.sh  node27_download_cycles.py  node27_download_once.sh  node27_ingest_run.py  node27_mirror_forcing.py  node27_mvt_prewarm.py  node27_product_archive.py  node27_product_archive_once.sh  node27_raw_retention.py  node27_raw_retention_once.sh  node27_refresh_coverage.py  node27_resource_governance.py  node27_resource_governance_once.sh  node27_storage_inventory_audit.py  node27_storage_inventory_audit_once.sh  node27_timeseries_compression.py  node27_timeseries_compression_benchmark.py  node27_timeseries_compression_bundle_author.py  node27_timeseries_compression_capture.py  node27_timeseries_compression_live_evidence.py  node27_timeseries_compression_once.sh  node27_timeseries_compression_plan_author.py  (+26 more)
services/: __init__.py
tests/: conftest.py  integration_helpers.py  mock_shud_omp.py  test_analysis_pipeline.py  test_api.py  test_api_contract.py  test_artifact_reader.py  test_auth_policy_matrix.py  test_backfill_river_segment_multilinestring.py  test_basins_discovery.py  test_basins_geometry_merge.py  test_basins_package_publication.py  test_basins_registry_import.py  test_basins_reingest.py  test_best_available.py  test_canonical_converter.py  test_chain_repository_nfs_raw_manifest.py  test_cli_publish_qdown.py  test_data_adapter_resolution.py  test_direct_grid_display_cutover_b4_leak.py  test_direct_grid_display_cutover_flip.py  test_direct_grid_display_cutover_history.py  test_direct_grid_display_cutover_model_resolution.py  test_direct_grid_e2e.py  test_direct_grid_evidence_smoke.py  test_direct_grid_variant_registration.py  test_display_catalog_cache.py  test_display_coverage_parallel.py  test_display_watermark.py  test_download_bbox_clip.py  test_e2e.py  test_e2e_ifs.py  test_e2e_m3.py  test_entropy_audit_script.py  test_era5_adapter.py  test_era5_canonical.py  test_file_orchestration_journal.py  test_file_orchestration_journal_read_cache.py  test_file_orchestration_migration.py  test_flood_alerts_api.py  (+151 more)
workers/: __init__.py
全国水文模拟系统_设计与开发Spec_v0.1/: 00_overall_design.md  01_architecture_and_flow.md  02_data_product_and_time_semantics.md  03_database_design.md  04_api_design.md  06_frontend_gis_design.md  07_devops_ops_security.md  08_roadmap_acceptance.md  09_sources.md  (+1 more)
(+1829 files in other folders)
