[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhms"
version = "0.1.0"
description = "National Hydrological Modeling System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "cfgrib>=0.9.10.4",
    "eccodes>=1.7.0",
    "xarray>=2024.3.0",
    "netCDF4>=1.6.5",
    "scipy>=1.12.0",
    "httpx>=0.27.0",
    "click>=8.1.7",
]

[project.scripts]
nhms-gfs = "workers.data_adapters.cli:main"
nhms-canonical = "workers.canonical_converter.cli:main"
nhms-model = "workers.model_registry.cli:main"
nhms-shud-runtime = "workers.shud_runtime.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "workers*", "packages*"]
